--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,8 @@ find_package(OpenGL REQUIRED)
 add_library(glad STATIC src/glad.c)
 target_include_directories(glad PUBLIC includes)
 
-
 find_package(glm CONFIG REQUIRED)
 
 add_executable(pendulum src/main.cpp src/glad.c src/shader.cpp src/ball.cpp src/rod.cpp src/trail.cpp)
 
-target_link_libraries(pendulum glm::glm-header-only glfw OpenGL::GL glad)
+target_link_libraries(pendulum glm::glm glfw OpenGL::GL glad)
